# internal/dto/transaction.dto.go
@@ -16,3 +16,21 @@ type ReceiverListResponse struct {
 	Items []ReceiverResponse `json:"items"`
 	Pages PaginationResponse `json:"pages"`
 }
+
+type TransferRequest struct {
+	ReceiverId int    `json:"receiver_id" validate:"required,gt=0"`
+	Amount     int    `json:"amount" validate:"required,gt=0"`
+	Notes      string `json:"notes" validate:"max=255"`
+}
+
+type TransferResponse struct {
+	ID              int    `json:"id"`
+	Amount          int    `json:"amount"`
+	ReceiverID      int    `json:"receiver_id"`
+	ReceiverName    string `json:"receiver_name"`
+	ReceiverPhone   string `json:"receiver_phone"`
+	Notes           string `json:"notes"`
+	Status          string `json:"status"`
+	TransactionType string `json:"transaction_type"`
+	CreatedAt       string `json:"created_at"`
+}
