# internal/model/transaction.model.go
@@ -18,3 +18,32 @@ type Receiver struct {
 	Receiver string  `db:"fullname"`
 	Phone    string  `db:"phone"`
 }
+
+type TransferDetail struct {
+	ID            int       `db:"id"`
+	TransactionID int       `db:"transaction_id"`
+	ReceiverID    int       `db:"receiver_id"`
+	Notes         *string   `db:"notes"`
+	CreatedAt     time.Time `db:"created_at"`
+}
+
+type Wallet struct {
+	ID        int        `db:"id" json:"id"`
+	UserID    int        `db:"user_id" json:"user_id"`
+	Balance   int        `db:"balance" json:"balance"`
+	CreatedAt time.Time  `db:"created_at" json:"created_at"`
+	UpdatedAt *time.Time `db:"update_at" json:"updated_at"`
+}
+
+// type TransactionDetail struct {
+// 	ID              int     `json:"id"`
+// 	UserID          int     `json:"user_id"`
+// 	Amount          int     `json:"amount"`
+// 	TransactionType string  `json:"transaction_type"`
+// 	Status          string  `json:"status"`
+// 	ReceiverID      int     `json:"receiver_id,omitempty"`
+// 	ReceiverName    string  `json:"receiver_name,omitempty"`
+// 	ReceiverPhone   string  `json:"receiver_phone,omitempty"`
+// 	Notes           *string `json:"notes,omitempty"`
+// 	CreatedAt       string  `json:"created_at"`
+// }
